--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --bg-color: white;
     --text-color: #333;    
 }
@@ -12,4 +12,4 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
-}
+} */
